refactor: modifica detalhe no footer

--- a/home/index.html
+++ b/home/index.html
@@ -245,7 +245,7 @@
         </div>
     </main>
 
-    <footer>&copy.Todos os direitos reservados a Leticya Medeiros</footer>
+    <footer>&copy; Todos os direitos reservados a Leticya Medeiros</footer>
 
     <script src="./script.js"></script>
 </body>
