--- a/home/index.html
+++ b/home/index.html
@@ -43,6 +43,7 @@
                         <p><i class="fa-solid fa-house"></i> Maceió</p>
                         <p><i class="fa-solid fa-envelope"></i> leticyammedeiros@gmail.com</p>
                         <p><i class="fa-solid fa-phone"></i> (82) 9 99925-3298</p>
+                        <p><a href="../linktree/index.html" target="_blank"><i class="fa-solid fa-up-right-from-square"></i> LinkTree</a></p>
                     </div>
                 </aside>
             </div>
