refactor: modifica alguns detalhes

--- a/home/index.html
+++ b/home/index.html
@@ -50,8 +50,8 @@
 
             <div id="conteudo-principal">
                 <section id="sobre">
-                    <p>Olá! Meu nome é <strong>Leticya Medeiros</strong> e sou um
-                    <strong>Desenvolvedor Frontend</strong> apaixonado por transformar
+                    <p>Olá! Meu nome é <strong>Leticya Medeiros</strong> e sou uma
+                    <strong>Desenvolvedora Frontend</strong> apaixonada por transformar
                     ideias em experiências digitais. Gosto de criar interfaces modernas,
                     responsivas e focadas na melhor experiência do usuário.</p>
 
@@ -173,7 +173,7 @@
 
                             <h3>Projeto</h3>
 
-                            <p>Uma landing page responsiva feita com HTML, CSS e JS.</p>
+                            <p>Uma página responsiva feita com HTML, CSS e JS.</p>
 
                             <ul class="projeto-tecnologias">
                                 <li>HTML</li>
@@ -193,7 +193,7 @@
                         </div>
 
                         <div class="projeto">
-                            <img src="../home/images/projeto2.png" alt="Projeto">
+                            <img src="../home/images/projeto.png" alt="Foto do Projeto">
 
                             <h3>Projeto</h3>
 
