refactor: modifica caminho da imagem

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div id="conteudo-secundario">
                 <aside>
                     <div id="img-container">
-                        <img src="../linktree/images/perfil.png" alt="Foto de Perfil">
+                        <img src="./linktree/images/perfil.png" alt="Foto de Perfil">
                     </div>
                     <h1>Leticya Medeiros</h1>
                     <p>Apaixonada por tecnologia e desenvolvimento web, buscando sempre aprender e criar soluções criativas que unam design e funcionalidade.</p>
