refactor: modifica caminho das imagens

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <p><i class="fa-solid fa-house"></i> Maceió</p>
                         <p><i class="fa-solid fa-envelope"></i> leticyammedeiros@gmail.com</p>
                         <p><i class="fa-solid fa-phone"></i> (82) 9 99925-3298</p>
-                        <p><a href="../linktree/index.html" target="_blank"><i class="fa-solid fa-up-right-from-square"></i> LinkTree</a></p>
+                        <p><a href="./linktree/index.html" target="_blank"><i class="fa-solid fa-up-right-from-square"></i> LinkTree</a></p>
                     </div>
                 </aside>
             </div>
@@ -169,7 +169,7 @@
 
                     <div class="grid-projetos">
                         <div class="projeto">
-                            <img src="../home/images/projeto.png" alt="Foto do Projeto">
+                            <img src="./images/projeto.png" alt="Foto do Projeto">
 
                             <h3>Projeto</h3>
 
@@ -193,7 +193,7 @@
                         </div>
 
                         <div class="projeto">
-                            <img src="../home/images/projeto.png" alt="Foto do Projeto">
+                            <img src="./images/projeto.png" alt="Foto do Projeto">
 
                             <h3>Projeto</h3>
 
