refactor: modifica o texto de apresentação do html

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
                     <strong>ciência da computação</strong> apaixonada por tecnologia
                     <!-- <strong>Desenvolvedora Frontend</strong>  --> 
                     e pelas possibilidades que ela oferece para transformar ideias em
-                    soluções reais. Tenho interesse em <strong>desenvolvimento web</strong>,
+                    soluções reais. <br> Tenho interesse em <strong>desenvolvimento web</strong>,
                     onde busco criar experiências digitais intuitivas, funcionais e bem estruturadas,
                     aliando design e desempenho. Além disso, tenho curiosidade e dedicação em aprender
                     e aplicar conceitos de <strong>inteligência artifical</strong>, sobretudo em como
                     usá-la de forma <strong>ética</strong> para o bem da sociedade.</p>
-
+                    <br>
                     <p>Tenho conhecimento em <strong>HTML, CSS, JavaScript</strong>, como também em
                     <strong>React</strong> e <strong>React Native</strong>, e estou sempre em busca 
                     de aprender novas tecnologias. Atualmente, estou construindo projetos para meu
