refactor: modifica o texto de apresentação do html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
                     <strong>ciência da computação</strong> apaixonada por tecnologia
                     <!-- <strong>Desenvolvedora Frontend</strong>  --> 
                     e pelas possibilidades que ela oferece para transformar ideias em
-                    soluções reais. <br> Tenho interesse em <strong>desenvolvimento web</strong>,
+                    soluções reais. </p>
+                    <br> 
+                    <p>Tenho interesse em <strong>desenvolvimento web</strong>,
                     onde busco criar experiências digitais intuitivas, funcionais e bem estruturadas,
                     aliando design e desempenho. Além disso, tenho curiosidade e dedicação em aprender
                     e aplicar conceitos de <strong>inteligência artifical</strong>, sobretudo em como
